<resources>
    <string name="menu_undone_all_tasks">Einsatz ausgefallen</string>
    <string name="menu_remove_manual_tasks">Einsatz löschen</string>
    <string name="menu_catalogs">Zusätzliche Leistungen</string>
    <string name="menu_notes">Besuchsvermerke</string>
    <string name="menu_info">Info</string>
    <string name="menu_patient_info">Aktuelle Informationen</string>
    <string name="menu_additional_address">Sonstige Adressen</string>
    <string name="menu_additional_address_short">Sonst. Adressen</string>
    <string name="menu_actual_workers">MA, zus. Info</string>
    <string name="menu_gps">Gps</string>
    <string name="menu_extra_assessments">Zusätzliche Assessments</string>
    <string name="menu_manual_input">Manuelle Eingabe</string>
    <string name="menu_address">Adressen</string>
    <string name="menu_relatives">Angehörige</string>
    <string name="menu_doctors">Ärzte</string>
    <string name="menu_comments">Bemerkungen</string>
    <string name="menu_add_tasks">Leistungen hinzufügen</string>
    <string name="menu_additional_work">Zusätzlicher Einsatz</string>
    <string name="menu_db_backup">DB Backup</string>
    <string name="menu_db_restore">DB entpacken</string>
    <string name="menu_clear_darabase">Daten leeren</string>
    <string name="menu_close_program">Programm schließen</string>
    <string name="menu_program_info">Programm Info</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_add_additional_work">Zusätzliche Einsätze</string>
    <string name="menu_diagnose">Diagnosen</string>
    <string name="menu_illness_tours">Einsatz</string>
    <string name="menu_common_tours">Gemeinschaftstour</string>
    <string name="menu_add_patient">Hinzufügen</string>
    <string name="menu_remove_patient">Abgeben</string>
    <string name="menu_all_patients">Alle Patienten anzeigen</string>
    <string name="menu_undo">Rückgängig</string>
    <string name="menu_set_braden">dekubitusgefährdete Stellen</string>
    <string name="action_settings">Settings</string>
    <string name="menu_workers_tour_info">Übergabe Tour</string>
    <string name="menu_workers_patient_info">Wer versorgt wann?</string>
    <string name="menu_cars_info">PKW Tausch</string>
    <string name="program_options">Programmoptionen</string>
    <string name="options">Optionen</string>
    <string name="pin_code">PIN:</string>
    <string name="save_pin_code">PIN speichern</string>
    <string name="server_ip">Server:</string>
    <string name="input_server_ip">Server IP</string>
    <string name="server_port">Port:</string>
    <string name="phone_number">Telefon-Nr:</string>
    <string name="lock_options">Einstellungen sperren</string>
    <string name="enter_interval">Intervall eingeben</string>
    <string name="connect_with">Kontaktaufnahme mit mir ist nötig</string>
    <string name="medications_changed">Medikation hat sich geändert</string>
    <string name="aubrplanmabige_pflege">Außerplanmäßige Pflege-Visite sind erforderlich</string>
    <string name="visit_notes">Besuchsvermerke</string>
    <string name="start_task">Einsatzbeginn</string>
    <string name="end_task">Einsatzende</string>
    <string name="weight">Gewicht</string>
    <string name="detect_respiration">Atemzüge</string>
    <string name="balance">Menge in ml</string>
    <string name="blood_sugar">Blutzucker</string>
    <string name="temperature">Temperatur</string>
    <string name="blood_pressure">Blutdruck</string>
    <string name="pulse">Puls</string>
    <string name="synchronization">Datenabgleich</string>
    <string name="waitng_sockets_to_close">Warten auf den Socketsabschluss...</string>
    <string name="enter_pin">Geben Sie bitte Ihre PIN hier...</string>
    <string name="connection_try">Verbindung herstellen</string>
    <string name="connection_ok">Verbindung OK. Invitation empfangen...</string>
    <string name="invitation_ok">Invitation OK. Synchronization...</string>
    <string name="invitation_fail">Invitation fehlgeschlagen</string>
    <string name="sycnhronizing_ok">Synchronisation OK. Initialisierung...</string>
    <string name="sycnhronizing_fail">Synchronisation fehlgeschlagen</string>
    <string name="hello_request_ok">Initialisierung OK. Kalkulation der Prüfsummen...</string>
    <string name="hello_request_fail">Initialisierung fehlgeschlagen</string>
    <string name="checksum_ok">Prüfsummen OK. Datenbearbeitung...</string>
    <string name="checksum_fail">Prüfsummen fehlgeschlagen</string>
    <string name="processing_data_ok">Datenbearbeitung OK</string>
    <string name="processing_data_fail">Datenbearbeitung fehlgeschlagen</string>
    <string name="data_to_download">Daten herunterladen</string>
    <string name="connection_close_ok">Verbindungsschluß OK</string>
    <string name="connection_close_fail">Verbindungsschluß fehlgeschlagen</string>
    <string name="done">Fertig</string>
    <string name="app_name">TourPilot</string>
    <string name="program_version">Programm Version:</string>
    <string name="data_base_version">Datenbank Version:</string>
    <string name="version">Version</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="street">Strasse:</string>
    <string name="zip">PLZ:</string>
    <string name="city">Ort:</string>
    <string name="phone">Telefon:</string>
    <string name="phone_private">Telefon (priv.):</string>
    <string name="phone_mobile">Mobiltelefon:</string>
    <string name="fax">Fax:</string>
    <string name="email">Email:</string>
    <string name="address_additional_info">Zusatzinfo:</string>
    <string name="def_empty_time">00:00</string>
    <string name="def_empty_date">xx.xx.xxxx</string>
    <string name="def_port">4448</string>
    <string name="blutzucker_value">mg/dl</string>
    <string name="atemzuge_value">A/min</string>
    <string name="gewicht_value">kg</string>
    <string name="puls_value">BpM</string>
    <string name="temperature_value">°C</string>
    <string name="ml">ml</string>
    <string name="min">diast.</string>
    <string name="max">syst.</string>
    <string name="back">Zurück</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbruch</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="dont_know">Sie wissen nicht</string>
    <string name="close">Schließen</string>
    <string name="search">Suchen</string>
    <string name="log_out">Abmelden</string>
    <string name="save">Speichern</string>
    <string name="start_time">Einsatzbeginn</string>
    <string name="stop_time">Einsatzende</string>
    <string name="tour_end">Tourende</string>
    <string name="stop">Stopp</string>
    <string name="start">Start</string>
    <string name="started_at">Gestartet um</string>
    <string name="attention">Achtung!</string>
    <string name="select_period">wählbarer Zeitraum</string>
    <string name="start_navigator">GPS Navigator starten</string>
    <string name="dialog_task_proof_undone">Möchten Sie diesen Einsatz als ausgefallen markieren?</string>
    <string name="dialog_task_remove_manual">Möchten Sie den Einsatz wirklich löschen?</string>
    <string name="dialog_task_proof_back">Möchten Sie wirklich die Zeiten verwerfen? Wenn Sie diese Meldung mit OK bestätigen, werden die Zeiten und jeweilige zusätzliche Leistungen gelöscht.</string>
    <string name="dialog_no_connection">Bitte, die Internet Verbindung zulassen</string>
    <string name="dialog_complete_all_tasks">Es fehlen noch Daten, die Sie für diese Tour noch nicht eingegeben haben. Bitte nehmen Sie die Eingabe jetzt vor.</string>
    <string name="dialog_no_ip_entered">Tragen Sie bitte die Server IP ein</string>
    <string name="dialog_connection_problems">Verbindungsstörungen</string>
    <string name="dialog_leaving_patient">Pflege OK?</string>
    <string name="dialog_proof_logout">Möchten Sie sich wirklich abmelden?</string>
    <string name="dialog_remove_pin">Soll der Pin weiterhin abgespeichert bleiben?</string>
    <string name="dialog_do_sync">Sie haben erfasste aber nicht gesendete Einsätze. Vor der Abmeldung muss eine Synchronisation durchgeführt werden.</string>
    <string name="dialog_comments">Bemerkungen</string>
    <string name="dialog_no_patients">Keine Patienten vorhanden</string>
    <string name="dialog_empty_tour">Die Tour ist leer</string>
    <string name="dialog_clear_database">Daten leeren?</string>
    <string name="dialog_employment_not_started">Einsatz ist noch nicht gestartet</string>
    <string name="dialog_start_employment">Bitte erst Einsatzbeginn antippen</string>
    <string name="dialog_reached_patient">Haben Sie den Patienten erreicht?</string>
    <string name="fallen_factor_question_0">Alter</string>
    <string name="fallen_factor_question_1">Mentaler Zustand</string>
    <string name="fallen_factor_question_2">Ausscheidung</string>
    <string name="fallen_factor_question_3">Stürze in der Vorgeschichte</string>
    <string name="fallen_factor_question_4">Aktivitäten</string>
    <string name="fallen_factor_question_5">Gang und Gleichgewicht</string>
    <string name="fallen_factor_question_6">Medikamente (auch geplante sowie die der letzten 7 Tage</string>
    <string name="fallen_factor_question_7">Alkohol / auch Melissengeist Pepsinwein o.a.</string>
    <string name="fallen_factor_answer_0_0">80 oder älter</string>
    <string name="fallen_factor_answer_0_1">70-79</string>
    <string name="fallen_factor_answer_0_2">60-69</string>
    <string name="fallen_factor_answer_0_3">keine der Antworten trifft zu</string>
    <string name="fallen_factor_answer_1_0">Zeitweise verwirrt / desorientiert</string>
    <string name="fallen_factor_answer_1_1">verwirrt / desorientiert</string>
    <string name="fallen_factor_answer_1_2">keine der Antworten trifft zu</string>
    <string name="fallen_factor_answer_2_0">Harn- und Stuhlinkontinenz</string>
    <string name="fallen_factor_answer_2_1">kontinent, braucht jedoch Hilfe</string>
    <string name="fallen_factor_answer_2_2">Blasenverweilkatheter / Enterostoma</string>
    <string name="fallen_factor_answer_2_3">keine der Antworten trifft zu</string>
    <string name="fallen_factor_answer_3_0">Bereits mehr als drei Mal gestürzt</string>
    <string name="fallen_factor_answer_3_1">Bereits ein-oder zwei Mal gestürzt</string>
    <string name="fallen_factor_answer_3_2">keine der Antworten trifft zu</string>
    <string name="fallen_factor_answer_4_0">Beschränkt auf Bett und Stuhl</string>
    <string name="fallen_factor_answer_4_1">Aufstehen aus dem Bett mit Hilfe</string>
    <string name="fallen_factor_answer_4_2">Selbstständig benutzt Bad und Toilette</string>
    <string name="fallen_factor_answer_4_3">keine der Antworten trifft zu</string>
    <string name="fallen_factor_answer_5_0">Ungleichmäßig / instabil, kann im Stehen und Gehen kaum die Balance halten</string>
    <string name="fallen_factor_answer_5_1">Orthostatische Störung / Kreislaufprobleme beim Aufstehen</string>
    <string name="fallen_factor_answer_5_2">Gehbehinderung / evtl. Gehen mit Gehhilfe oder Assistenz</string>
    <string name="fallen_factor_answer_5_3">keine der Antworten trifft zu</string>
    <string name="fallen_factor_answer_6_0">Drei oder mehr Medikamente</string>
    <string name="fallen_factor_answer_6_1">Zwei Medikamente</string>
    <string name="fallen_factor_answer_6_2">ein Medikament</string>
    <string name="fallen_factor_answer_6_3">keine der Antworten trifft zu</string>
    <string name="fallen_factor_answer_7_0">regelmäßig</string>
    <string name="fallen_factor_answer_7_1">gelegentlich</string>
    <string name="fallen_factor_answer_7_2">keine der Antworten trifft zu</string>
    <string name="show_questions">Zeige Fragen</string>
    <string name="show_answers">Zeige Ergebnisse</string>
</resources>