<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
		<LinearLayout
		    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"> 	
		    
		    <CheckBox
		        android:id="@+id/cb_LockOptions"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/lock_options" 
		        android:onClick="onLockOptions"/>
		
	        <TextView
	            android:id="@+id/tvServer"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/cb_LockOptions"
	            android:text="@string/server_ip"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <EditText
	            android:id="@+id/etServerIP"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/tvServer"
	            android:focusable="true" android:focusableInTouchMode="true"
	            android:hint="@string/input_server_ip"
	            android:inputType="text" />
		
	        <TextView
	            android:id="@+id/tvPort"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/etServerIP"
	            android:focusable="true" android:focusableInTouchMode="true"
	            android:text="@string/server_port"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <EditText
	            android:id="@+id/etServerPort"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/tvPort"
	            android:focusable="true" android:focusableInTouchMode="true"
	            android:inputType="number"            
	            android:text="@string/def_port" />
		
		    <TextView
		        android:id="@+id/tvPhoneNumber"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/etServerPort"
		        android:text="@string/phone_number"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <EditText
		        android:id="@+id/etPhoneNumber"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/tvPhoneNumber"
		        android:inputType="phone" />

   		    <ProgressBar
		        android:id="@+id/pbClearDB"
		        style="?android:attr/progressBarStyleLarge"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_centerHorizontal="true"
		        android:layout_centerVertical="true"
		        android:visibility="invisible" />
		    
		    </LinearLayout>
	</ScrollView>
</RelativeLayout>